# ppf-reconstruction

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Q2  README.md  _config.yml  index.html  index.md  params.json
R/: timings.R
bunny/: bunny_smoothNormals.ply  bunny_smoothNormals.xyz  model.xyz
bunny/Bunny_RealData/old-depth-poses-unused/: posesMarkerN_12.txt  posesMarkerN_16.txt  posesMarkerN_23.txt  posesMarkerN_24.txt  posesMarkerN_26.txt  posesMarkerN_30.txt  posesMarkerN_32.txt  posesMarker_15.txt  posesMarker_17.txt  posesMarker_23.txt  posesMarker_29.txt  poses_12.txt  poses_2.txt  poses_24.txt  poses_25.txt  poses_33.txt  poses_9.txt
bunny/Bunny_Sphere/: depth_000003.exr  depth_000004.exr  depth_000007.exr  depth_000009.exr  depth_000013.exr  depth_000014.exr  depth_000017.exr  depth_000018.exr  depth_000020.exr  depth_000021.exr  depth_000022.exr  depth_000023.exr  depth_000025.exr  depth_000026.exr  depth_000029.exr  depth_000031.exr  depth_000032.exr  depth_000034.exr  depth_000035.exr  depth_000038.exr  depth_000040.exr  depth_000041.exr  poses_000000.txt  poses_000011.txt  poses_000012.txt  poses_000013.txt  poses_000014.txt  poses_000015.txt  poses_000016.txt  poses_000017.txt  poses_000020.txt  poses_000022.txt  poses_000026.txt  poses_000027.txt  poses_000030.txt  poses_000031.txt  poses_000032.txt  poses_000037.txt  poses_000039.txt  poses_000040.txt  (+1 more)
bunny/depth-cloud/: cloudXYZ_36.xyz
bunny/depth-poses/: posesMarkerN_0.txt  posesMarkerN_1.txt  posesMarkerN_13.txt  posesMarkerN_17.txt  posesMarkerN_19.txt  posesMarkerN_2.txt  posesMarkerN_29.txt  posesMarkerN_3.txt  posesMarkerN_31.txt  posesMarkerN_34.txt  posesMarkerN_36.txt  posesMarkerN_4.txt  posesMarkerN_6.txt  posesMarkerN_9.txt  posesMarker_0.txt  posesMarker_10.txt  posesMarker_13.txt  posesMarker_14.txt  posesMarker_18.txt  posesMarker_19.txt  posesMarker_2.txt  posesMarker_21.txt  posesMarker_22.txt  posesMarker_27.txt  posesMarker_3.txt  posesMarker_4.txt  posesMarker_6.txt  posesMarker_7.txt  posesMarker_8.txt  posesMarker_9.txt  poses_0.txt  poses_1.txt  poses_11.txt  poses_16.txt  poses_17.txt  poses_18.txt  poses_19.txt  poses_20.txt  poses_21.txt  poses_26.txt  (+9 more)
bunny/depth-poses/old/: posesMarkerN_14.txt  posesMarkerN_18.txt  posesMarkerN_20.txt  posesMarkerN_21.txt  posesMarkerN_22.txt  posesMarkerN_27.txt  posesMarkerN_28.txt  posesMarkerN_33.txt  posesMarkerN_5.txt  posesMarkerN_7.txt  posesMarker_1.txt  posesMarker_12.txt  posesMarker_24.txt  posesMarker_25.txt  posesMarker_28.txt  posesMarker_31.txt  posesMarker_32.txt  posesMarker_34.txt  posesMarker_5.txt  poses_15.txt  poses_27.txt  poses_30.txt  poses_8.txt
include/: ApproachComponents.h  CPUTimer.h  Constants.h  G2OWrapper.h  LoadingSaving.h  OpenCVHelpers.h  PPF.h  Params.h  PointCloud.h  PointCloudManipulation.h  PointPairFeatures.h  RandomN.h  Visualize.h  g2oTypeSim3Sophus.h  pointcloud.h  types_icp.h
matlab/: Frame.m  depth2cloud.m  deriveErrorAnalytic3NJacobian.m  eulerAngle.m  global_graph_opt_easy.m  hat.m  lm_icp_easy.m  lm_icp_hard.m  lm_icp_step_eulerAngles.m  lm_icp_step_twists.m  lm_icp_step_twistsSimple.m  makeRot.m  mv_lm_icp_easy.m  mv_lm_icp_hard.m  mv_lm_icp_step.m  nonlinear_opt.m  nonlinear_opt_easy.m  plotCloud.m  pointToPlaneSym.m  pointToPoint.m  pointToPoint_lm_twists.m  project.m  se3Exp.m  test.m
python/: badTraj  evaluate_rpe.py  saveBunny
samples/: bun_zipper.ply
samples/Bunny_RealData/: Intrinsic.txt  P.txt  Q.txt  est_poses_1.txt  est_poses_10.txt  est_poses_11.txt  est_poses_12.txt  est_poses_13.txt  est_poses_14.txt  est_poses_15.txt  est_poses_16.txt  est_poses_17.txt  est_poses_18.txt  est_poses_19.txt  est_poses_2.txt  est_poses_20.txt  est_poses_21.txt  est_poses_22.txt  est_poses_23.txt  est_poses_24.txt  est_poses_25.txt  est_poses_26.txt  est_poses_27.txt  est_poses_28.txt  est_poses_29.txt  est_poses_3.txt  est_poses_30.txt  est_poses_31.txt  est_poses_32.txt  est_poses_33.txt  est_poses_34.txt  est_poses_35.txt  est_poses_36.txt  est_poses_4.txt  est_poses_5.txt  est_poses_6.txt  est_poses_7.txt  est_poses_8.txt  est_poses_9.txt  est_poses_pointPlane_1.txt  (+44 more)
samples/Bunny_Sphere/: Intrinsic.txt  P.txt  Q.txt  depth_000000.exr  depth_000001.exr  depth_000002.exr  depth_000005.exr  depth_000006.exr  depth_000008.exr  depth_000010.exr  depth_000011.exr  depth_000012.exr  depth_000015.exr  depth_000016.exr  depth_000019.exr  depth_000024.exr  depth_000027.exr  depth_000028.exr  depth_000030.exr  depth_000033.exr  depth_000036.exr  depth_000037.exr  depth_000039.exr  est_poses_pointPlane_0.txt  est_poses_pointPlane_1.txt  est_poses_pointPlane_10.txt  est_poses_pointPlane_11.txt  est_poses_pointPlane_12.txt  est_poses_pointPlane_13.txt  est_poses_pointPlane_14.txt  est_poses_pointPlane_15.txt  est_poses_pointPlane_16.txt  est_poses_pointPlane_17.txt  est_poses_pointPlane_18.txt  est_poses_pointPlane_19.txt  est_poses_pointPlane_2.txt  est_poses_pointPlane_20.txt  est_poses_pointPlane_21.txt  est_poses_pointPlane_22.txt  est_poses_pointPlane_23.txt  (+55 more)
samples/models/: posesMarkerN_To_PLY-ppf.txt
src/: ApproachComponents.cpp  CPUTimer.cpp  Constants.h  LoadingSaving.cpp  LoadingSaving.h  PPF.cpp  PPF.h  Params.cpp  Params.h  PointCloud.cpp  PointCloudManipulation.cpp  PointCloudManipulation.h  PointPairFeatures.cpp  PointPairFeatures.h  RandomN.h  Visualize.cpp  Visualize.h  g2oTypeSim3Sophus.cpp  gicp_adrian.cpp  main.cpp  mainLocalCoordinates.cpp  mainOpenCVViz.cpp  mainPoseDiff.cpp  mainSequence.cpp  mainTransformations.cpp  main_frameToFrame.cpp  main_frameToModel-ICP-refine.cpp  main_frameToModel-PPF-coarse.cpp  main_frameToModel.cpp  main_globalOptimization.cpp  main_lm-icp.cpp  main_modelToScene.cpp  main_ppf_reconstruction.cpp  multiviewrefinement.cpp  multiviewrefinement.h  pointcloud.cpp  pointcloud.h  test1.cpp  test2.cpp  types_icp.cpp  (+1 more)
src/viz/: cameraSimple.h  frustum.h  teapot.h
src/viz-opencv/: mainSequence.cpp  mainTransformations.cpp
tests/: runTests.cpp  testHelpers.h  test_PointCloudManipulation.cpp  test_PointPairFeatures.cpp  test_PoseClustering.cpp
(+30 files in other folders)
